--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "vue": "^3.2.21"
   },
   "devDependencies": {
+    "@vuepress/client": "^2.0.0-beta.60",
     "@vuepress/plugin-register-components": "^2.0.0-beta.60",
     "@vuepress/utils": "^2.0.0-beta.60",
     "rollup": "^3.15.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-vue": "^6.0.0"
-  },
-  "dependencies": {
+    "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.2.47",
     "vuepress": "^2.0.0-beta.60"
   }
 }
